production managment and store setup endpoints updated
