# internal/constant/models/db/store.go
@@ -5,7 +5,9 @@ import "time"
 type Store struct {
 	BaseModel
 	SellerID       int64  `gorm:"column:seller_id;not null" json:"seller_id"`
-	TelegramChatID int64  `gorm:"column:telegram_chat_id;uniqueIndex;not null" json:"telegram_chat_id"`
+	TelegramChatID int64  `gorm:"column:telegram_chat_id;index" json:"telegram_chat_id"`
+	TelegramChatTitle string `gorm:"column:telegram_chat_title" json:"telegram_chat_title"`
+	Status         string `gorm:"column:status;default:pending" json:"status"`
 	Name           string `gorm:"column:name;not null" json:"name"`
 	Category       string `gorm:"column:category;not null" json:"category"`
 	Description    string `gorm:"column:description" json:"description"`
